errorfreetext-k8s/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: errorfreetext-app-service
  namespace: errorfreetext
  labels:
    app: errorfreetext-app
    service: errorfreetext
spec:
  selector:
    app: errorfreetext-app
  ports:
    - port: 9090
      targetPort: 9090
      name: http
  type: ClusterIP
