errorfreetext-k8s/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: errorfreetext-ingress
  namespace: errorfreetext
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - errorfreetext.example.com
      secretName: errorfreetext-tls
  rules:
    - host: errorfreetext.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: errorfreetext-app-service
                port:
                  number: 9090
